@@ -46,7 +46,6 @@ public class RoundTripAltAlgorithm implements RoutingAlgorithm
     private final FlagEncoder flagEncoder;
     private final Weighting weighting;
     private final TraversalMode traversalMode;
-    private double weightLimit = Double.MAX_VALUE;
     private int visitedNodes;
     private int maxVisitedNodes = Integer.MAX_VALUE;
     private double maxWeightFactor = 2;
@@ -75,7 +74,6 @@ public class RoundTripAltAlgorithm implements RoutingAlgorithm
     public List<Path> calcRoundTrips( int from, double maxFullDistance, final double penaltyFactor )
     {
         AltSingleDijkstra altDijkstra = new AltSingleDijkstra(graph, flagEncoder, weighting, traversalMode);
-        altDijkstra.setWeightLimit(weightLimit);
         altDijkstra.setMaxVisitedNodes(maxVisitedNodes);
         altDijkstra.beforeRun(from);
         SPTEntry currFrom = altDijkstra.searchBest(from, maxFullDistance);
@@ -122,7 +120,6 @@ public class RoundTripAltAlgorithm implements RoutingAlgorithm
         };
         AlternativeRoute.AlternativeBidirSearch altBidirDijktra = new AlternativeRoute.AlternativeBidirSearch(graph, flagEncoder,
                 altWeighting, traversalMode, 1);
-        altBidirDijktra.setWeightLimit(weightLimit);
         altBidirDijktra.setMaxVisitedNodes(maxVisitedNodes);
         // find an alternative for backward direction starting from 'to'
         Path bestBackwardPath = altBidirDijktra.searchBest(to, from);
@@ -203,12 +200,6 @@ public class RoundTripAltAlgorithm implements RoutingAlgorithm
         double maxDist = Helper.DIST_EARTH.calcDist(fromLat, fromLon, toLat, toLon) * 2;
         double penaltyFactor = 2;
         return calcRoundTrips(from, maxDist, penaltyFactor);
-    }
-
-    @Override
-    public void setWeightLimit( double weightLimit )
-    {
-        this.weightLimit = weightLimit;
     }
 
     @Override
